--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "lint:eslint:fix": "eslint . --ext .js,.astro,.ts,.tsx --fix"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^2.1.2",
-    "astro": "^1.6.8",
-    "tailwindcss": "^3.2.4"
+    "@astrojs/react": "1.2.2",
+    "@astrojs/tailwind": "2.1.2",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "astro": "1.6.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.43.0",
